--- a/styles/image_association.css
+++ b/styles/image_association.css
@@ -113,24 +113,10 @@ img[src=""], .not-start {
     border-radius: 10px;
     transition: 0.2s all ease-in;
     -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
-    border-style: dashed;
+    /*border-style: dashed;*/
     height: 62px;
 }
-.blanks1 {
-    position: relative;
-    text-align: center;
-    min-height: 50px;
-    min-width: 70px;
-    background-color: white;
-    width: max-content;
-    height: max-content;
-    border-radius: 10px;
-    transition: 0.2s all ease-in;
-    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
-    border-style: dashed;
-    height: 43px;
-    width: 180px;
-}
+
 
 .blanks-border {
     border: 2px solid black;
